# OreCart-App

./: .env  .gitignore  CODEOWNERS  LICENSE  README.md  app.json  backend.env  database.env  docker-compose.yml  frontend-admin.env  mtls-proxy.env  mypy.ini  nginx.conf  nginx.docker-compose.yml  package-lock.json  package.json  prod.docker-compose.yml  staging.docker-compose.yml
.expo/: settings.json
.github/workflows/: nodejs-lint.yaml  python-lint.yaml
.hooks/: pre-push
OreCart/: App.tsx  app.json
backend/: .dockerignore  .env.template  .gitignore  Dockerfile  OreCart Database ER Diagram.erd  README.md  alembic.ini  backend-routes-proposal.md  backend-schema-proposal.md  main.py  pylintrc  requirements.txt  sample.env
backend/alembic/: README.md  d53db4ccb3fc_drop_waypoints_unique_constraint.py  env.py
backend/alembic/versions/: 03a80025a6fa_schedules_sqlalchemy.py  05a50336996b_routes_sqlalchemy.py  0f45cf2fa8e0_route_stops_sqlalchemy.py  174e5a759f2d_create_stops_table.py  1a8780dd5bbc_add_route_color.py  1c671fd3ab92_vans_table_sqlalchemy.py  233206860d70_create_waypoints_table.py  (+36 more)
backend/migrations/: create_alerts_table.sql  create_analytics_table.sql  create_route_disables_table.sql  create_route_stops_table.sql  create_route_vans_table.sql  create_routes_table.sql  create_schedules_table.sql  create_stops_table.sql  create_vans_table.sql  create_waypoints_table.sql
backend/src/: db.py  exception_handlers.py  hardware.py  hw.py  main.py  request.py
backend/tests/: conftest.py  temp.py  test_alert.py  test_analytics.py  test_ridership.py  test_stops.py
frontend/: .env.sample  .eslintrc.json  .gitignore  App.tsx  README.md  app.config.js  app.json  credentials.json  eas.json  package-lock.json  package.json  sample.env
frontend-admin/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend-admin/src/: index.css  jwt-fetch.tsx  main.tsx
frontend/components/: Map.tsx
frontend/patches/: @react-native-community+datetimepicker+7.2.0.patch
frontend/screens/: Main.tsx
frontend/services/: location.ts
frontend/src/: App.tsx  Main.tsx  store.ts
hardware/: .gitignore  CMakeLists.txt  Kconfig  README.md  SETUP.md  prj.conf  sparkfun_thing_plus_nrf9160.overlay
hardware/application/: CMakeLists.txt  prj.conf
hardware/application/fontgen/: generate_font.py
hardware/application/src/: Config.hpp  main.cpp
hardware/application/src/common/: Channel.hpp  Semaphore.cpp  Semaphore.hpp
hardware/application/src/modules/control/: control_module.cpp  control_module.hpp
hardware/application/src/modules/control/button/: Button.hpp  ButtonInterface.cpp  ButtonInterface.hpp  button_event.c  button_event.h  button_terminal.cpp  button_terminal.hpp
hardware/application/src/modules/net/: NetWorker.cpp  NetWorker.hpp  net_module.cpp  net_module.hpp
hardware/application/src/modules/net/events/: net_task_event.c  net_task_event.h
hardware/application/src/modules/net/model/: Location.hpp  Route.hpp
hardware/application/src/modules/net/result/: NetResult.cpp  NetResult.hpp  NetResultInterface.cpp  NetResultInterface.hpp  net_result_event.c  net_result_event.h  net_result_terminal.cpp  net_result_terminal.hpp
hardware/application/src/modules/net/stack/: API.cpp  API.hpp  HTTP.cpp  HTTP.hpp  Modem.cpp  Modem.hpp
hardware/application/src/modules/net/task/: NetTask.cpp  NetTask.hpp  NetTaskInterface.cpp  NetTaskInterface.hpp  net_task_event.c  net_task_event.h  net_task_terminal.cpp  net_task_terminal.hpp
hardware/application/src/modules/ui/: AScreen.cpp  AScreen.hpp  IView.hpp  UIWorker.cpp  UIWorker.hpp  ui_module.cpp  ui_module.hpp
hardware/application/src/modules/ui/canvas/: DisplayCanvas.cpp  DisplayCanvas.hpp  Geometry.hpp  Glyph.hpp  ICanvas.hpp  RectShape.cpp  RectShape.hpp  SubCanvas.cpp  SubCanvas.hpp
hardware/application/src/modules/ui/event/: UIEvent.cpp  UIEvent.hpp
hardware/application/src/modules/ui/route_select/: RouteSelectScreen.cpp  RouteSelectScreen.hpp
hardware/application/src/modules/ui/screen/: AScreen.cpp  AScreen.hpp
hardware/application/src/modules/ui/select/: Select.cpp  Select.hpp  SelectGroup.cpp  SelectGroup.hpp
hardware/application/src/modules/ui/spacer/: Spacer.cpp  Spacer.hpp
hardware/application/src/modules/ui/text/: Text.cpp  Text.hpp
hardware/src/: API.cpp  API.hpp  Model.hpp  Modem.cpp  Modem.hpp  main.cpp
hardware/src/modules/net/: API.cpp  HTTP.cpp  NetModule.cpp  NetModule.hpp  NetWorker.cpp  NetWorker.hpp  net_module.cpp  net_module.hpp
hardware/src/modules/net/events/: NetTask.c  NetTask.h  net_task_event.c  net_task_event.h  net_task_factory.h
hardware/src/modules/net/stack/: API.hpp  Modem.cpp
hardware/src/modules/ui/canvas/: DisplayCanvas.cpp  Glyph.hpp
mtls-proxy/: .dockerignore  Dockerfile  requirements.txt
mtls-proxy/src/: main.py
(+209 files in other folders)
